# newsagent

./: .envrc  .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: _lint.yml  _test.yml  push.yml  release.yml
src/: config.rs  main.rs
src/agent/: agent.rs  mod.rs  prompt.rs
src/tools/: discourse.rs  glean.rs  mailing_list.rs  mod.rs  todoist.rs  web.rs
tests/: config.rs
tests/agent/: agent.rs  main.rs  prompt.rs
tests/common/: mod.rs
tests/tools/: discourse.rs  glean.rs  mailing_list.rs  main.rs  todoist.rs  web.rs
