[package]
name = "newsagent"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = { version = "0.28", default-features = false }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
walkdir = "2.5"
log = "0.4"
env_logger = "0.11"
envy = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
] }
readability = { version = "0.3", default-features = false }
url = "2.5"

[dev-dependencies]
tempfile = "3.12"
wiremock = "0.6"
